# muffet-bot

./: .gitignore  Cargo.toml  README.md  config.toml  sample_config.toml
src/: admin.rs  commands.rs  main.rs  utils.rs
src/admin/: commands.rs
src/commands/: admin.rs  builtin.rs  minecraft_server.rs  prelude.rs  simple_announcements.rs  socials.rs  steel_cut_kawaii.rs
src/mods/: commands.rs
src/utils/: boiler.rs  config.rs  discord.rs  logger.rs  net.rs  prelude.rs  scraper.rs
