[package]
name = "muffet-bot"
version = "0.1.1"
authors = ["muffetbot <muffetbot@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
easy-scraper = "0.2.0"
once_cell = "1.4.1"
reqwest = "0.10.8"
serenity = { version = "0.9.0-rc.2", features = ["framework", "standard_framework", "rustls_backend"] }
smartstring = "0.2.5"
tokio = { version = "0.2.22", features = ["macros"] }
webbrowser = "0.5.5"
