[package]
name = "muffet-bot"
version = "0.1.2"
authors = ["muffetbot <muffetbot@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
easy-scraper = "0.2.0"
flexi_logger = "0.16"
log = "0.4"
once_cell = "1.5.2"
rand = "0.7.3"
reqwest = "0.10.9"
serenity = { version = "0.9.0-rc.3", features = ["framework", "standard_framework", "rustls_backend"] }
smartstring = "0.2.5"
tokio = { version = "0.2.22", features = ["macros"] }
