[package]
name = "muffet-bot"
version = "0.2.1"
authors = ["muffetbot <muffetbot@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
home = "0.5.3"
once_cell = "1.5.2"
rand = "0.8.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serenity = { version = "0.9.3", features = ["framework", "standard_framework", "rustls_backend"] }
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "0.2.24", features = ["macros"] }
toml = "0.5.8"
tracing = "0.1.22"
tracing-appender = "0.1.1"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = ["fmt"] }

# scraper = { path = "scraper", version = "0.1.0", features = ["scraper"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
